# janus

./: .gitignore  Cargo.toml  DEVNET.md  README.md  ROADMAP.md  SCALAR_MARKETS_DESIGN.md
.github/workflows/: verify.yml
agent-toolkit/: .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json
agent-toolkit/examples/: spawn-swarm.ts
agent-toolkit/src/: discovery.ts  index.ts  keypair-manager.ts  runner.ts  strategy.ts  telemetry.ts  trade-client.ts  types.ts
agent-toolkit/src/strategies/: market-maker.ts  mean-reverter.ts  momentum.ts  random.ts
crates/lmsr-math/: Cargo.toml
crates/lmsr-math/src/: cost.rs  exp.rs  lib.rs  ln.rs
crates/lmsr-math/tests/: proptest.rs
crates/resolver-interface/: Cargo.toml
crates/resolver-interface/src/: lib.rs
demo/: .env.example  .gitignore  README.md  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts  vercel.json
demo/app/: globals.css  layout.tsx  page.tsx  providers.tsx
demo/app/create/: page.tsx
demo/app/markets/: page.tsx
demo/app/markets/[market]/: page.tsx
demo/app/swarm/: page.tsx
demo/components/: Nav.tsx
demo/lib/: janus.ts  positions.ts
formal_verification/: KANI_RESULTS.md  LEAN_RESULTS.md  README.md
formal_verification/account_layer/: Proofs.lean  Spec.lean  account_layer.qedspec  lakefile.lean
formal_verification/account_layer/lean_solana/: lakefile.lean
formal_verification/account_layer/lean_solana/QEDGen/Solana/: Account.lean  Arithmetic.lean  Valid.lean
formal_verification/account_layer/lean_solana_mathlib/: lakefile.lean
formal_verification/account_layer/lean_solana_mathlib/QEDGenMathlib/: IndexedState.lean
formal_verification/conditional_tokens/: Proofs.lean  Spec.lean  conditional_tokens.qedspec  kani.rs  lakefile.lean  proptest.rs
formal_verification/conditional_tokens/SVM/: Market.lean
formal_verification/conditional_tokens/lean_solana/: lakefile.lean
formal_verification/kani-runner/: Cargo.toml
formal_verification/kani-runner/src/: lib.rs
formal_verification/kani-runner/tests/: conditional_tokens.rs  lmsr_market.rs  market_factory.rs  pyth_price_resolver.rs  slot_height_resolver.rs
formal_verification/lmsr_market/: Proofs.lean  Spec.lean  kani.rs  lakefile.lean  lmsr_market.qedspec  proptest.rs
formal_verification/lmsr_market/lean_solana/: QEDGen.lean
formal_verification/lmsr_market/lean_solana/QEDGen/Solana/: Cpi.lean  Spec.lean
formal_verification/lmsr_true_market/: LmsrCost.lean  Proofs.lean  Spec.lean  lakefile.lean  lmsr_true_market.qedspec
formal_verification/market_factory/: .gitignore  Proofs.lean  Spec.lean  kani.rs  lakefile.lean  market_factory.qedspec  proptest.rs
formal_verification/pyth_price_resolver/: Proofs.lean  Spec.lean  kani.rs  lakefile.lean  proptest.rs  pyth_price_resolver.qedspec
formal_verification/pyth_price_resolver/lean_solana/QEDGen/: Solana.lean
formal_verification/pyth_price_resolver/lean_solana/QEDGen/Solana/: Account.lean
formal_verification/slot_height_resolver/: .gitignore  Proofs.lean  Spec.lean  kani.rs  lakefile.lean  proptest.rs  slot_height_resolver.qedspec
formal_verification/slot_height_resolver/lean_solana/: lakefile.lean
formal_verification/slot_height_resolver/lean_solana/QEDGen/: Solana.lean
programs/conditional-tokens/: Cargo.toml
programs/conditional-tokens/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
programs/lmsr-market/: Cargo.toml
programs/lmsr-market/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
programs/lmsr-true-market/: Cargo.toml
programs/lmsr-true-market/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
programs/market-factory/: Cargo.toml
programs/market-factory/src/: lib.rs
programs/pyth-price-resolver/: Cargo.toml
programs/pyth-price-resolver/src/: lib.rs
programs/slot-height-resolver/: Cargo.toml
programs/slot-height-resolver/src/: lib.rs
scripts/: sync-program-ids.sh
scripts/devnet/: demo.mjs  deploy.sh  package.json  pyth-verify.mjs
scripts/e2e-localnet/: package.json  pnpm-lock.yaml  run.sh  test.mjs
sdk/: package.json  pnpm-lock.yaml  tsconfig.json
sdk/src/: constants.ts  createMarket.ts  index.ts  pda.ts
sdk/src/ix/: conditional-tokens.ts  lmsr-market.ts  lmsr-true-market.ts  market-factory.ts  resolvers.ts
tests/: Cargo.toml
tests-qedsvm/: Cargo.toml  FINDINGS.md  LEVEL_2_SPLIT_SPEC.md  LEVEL_2_STEP2_PROPOSAL.md  build.rs
tests-qedsvm/disasm/: janus_conditional_tokens.S
tests-qedsvm/src/: lib.rs
tests-qedsvm/tests/: conditional_tokens_redeem.rs  conditional_tokens_split.rs  lmsr_market_swap.rs  pyth_resolver_resolve.rs  slot_height_resolver.rs  slot_resolver_resolve.rs
tests/src/: lib.rs
tests/tests/: conditional_tokens.rs  lmsr_market.rs  lmsr_true_market.rs  market_factory.rs  pyth_price_resolver.rs  slot_height_resolver.rs
