[package]
name = "janus-tests"
description = "Integration tests for the Janus programs, executed via Mollusk"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
mollusk-svm = "0.12.0"
mollusk-svm-programs-token = "0.12.0"
solana-pubkey = "3.0"
solana-instruction = "3.0"
solana-account = "3.0"
bytemuck = { version = "1.16", features = ["derive"] }

[dev-dependencies]
mollusk-svm = "0.12.0"
mollusk-svm-programs-token = "0.12.0"
solana-pubkey = "3.0"
solana-instruction = "3.0"
solana-account = "3.0"
bytemuck = { version = "1.16", features = ["derive"] }

[lints]
workspace = true
