[package]
name = "janus-resolver-interface"
description = "Standardized resolver interface shared by all Janus resolver programs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
pinocchio.workspace = true

[lints]
workspace = true
