[package]
name = "janus-kani-runner"
description = "Kani harness runner — wraps the generated kani.rs files so `cargo kani --tests` can execute them"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[lib]
path = "src/lib.rs"

# Harnesses each live in their own `tests/<program>.rs` file so a single
# `cargo kani --tests` run discovers and verifies every Janus program.

[lints]
workspace = true
