[package]
name = "janus-conditional-tokens"
description = "Conditional outcome tokens primitive for binary markets on Solana"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[lints]
workspace = true

[dependencies]
pinocchio.workspace = true
pinocchio-pubkey.workspace = true
pinocchio-system.workspace = true
pinocchio-token.workspace = true
pinocchio-log.workspace = true
