[package]
name = "janus-market-factory"
description = "Janus market registry — records each market's component pubkeys for trustless on-chain discovery"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
pinocchio.workspace = true
pinocchio-pubkey.workspace = true
pinocchio-system.workspace = true

[lints]
workspace = true
