[package]
name = "janus-pyth-price-resolver"
description = "Janus resolver: resolves YES/NO based on a Pyth price feed crossing a threshold at or after a target slot"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
pinocchio.workspace = true
pinocchio-pubkey.workspace = true
pinocchio-system.workspace = true
janus-resolver-interface = { path = "../../crates/resolver-interface", version = "0.1.0" }

[lints]
workspace = true
