[package]
name = "janus-slot-height-resolver"
description = "Janus resolver: resolves YES (or operator-chosen outcome) once a target slot is reached"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
pinocchio.workspace = true
pinocchio-pubkey.workspace = true
pinocchio-system.workspace = true
janus-resolver-interface = { path = "../../crates/resolver-interface", version = "0.1.0" }

[lints]
workspace = true
